--- a/natrank-frontend/index.html
+++ b/natrank-frontend/index.html
@@ -31,7 +31,8 @@
       </header>
       <nav class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#/results">Results</a></li>
+          <li><a href="#/results">Results</a></li>
+          <li><a href="#/rankings">Rankings</a></li>
         </ul>
       </nav>
     </div>
@@ -63,6 +64,8 @@
   <script src="app.js"></script>
   <script src="partial/results/results.js"></script>
   <script src="service/match.js"></script>
+  <script src="partial/rankings/rankings.js"></script>
+  <script src="service/ranking.js"></script>
   <!-- Add New Component JS Above -->
 </body>
 </html>
