--- a/natrank-frontend/index.html
+++ b/natrank-frontend/index.html
@@ -12,6 +12,7 @@
 <!DOCTYPE html>
 <html data-ng-app="natrank">
 <head>
+  <base href="/">
   <title>natrank</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
@@ -31,8 +32,8 @@
       </header>
       <nav class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li><a href="#/results">Results</a></li>
-          <li><a href="#/rankings">Rankings</a></li>
+          <li><a href="results">Results</a></li>
+          <li><a href="rankings">Rankings</a></li>
         </ul>
       </nav>
     </div>
