Visual changes to ranking view

--- a/natrank-frontend/index.html
+++ b/natrank-frontend/index.html
@@ -67,6 +67,7 @@
   <script src="service/match.js"></script>
   <script src="partial/rankings/rankings.js"></script>
   <script src="service/ranking.js"></script>
+  <script src="filter/whitespaceToDash.js"></script>
   <!-- Add New Component JS Above -->
 </body>
 </html>
