Added bare-bones team view with team's result list.

--- a/natrank-frontend/index.html
+++ b/natrank-frontend/index.html
@@ -74,6 +74,9 @@
   <script src="partial/rankings/rankings.js"></script>
   <script src="service/ranking.js"></script>
   <script src="filter/whitespaceToDash.js"></script>
+  <script src="partial/team/team.js"></script>
+  <script src="service/team.js"></script>
+  <script src="directive/resultList/resultList.js"></script>
   <!-- Add New Component JS Above -->
 </body>
 </html>
