--- a/natrank-frontend/index.html
+++ b/natrank-frontend/index.html
@@ -77,6 +77,7 @@
   <script src="partial/team/team.js"></script>
   <script src="service/team.js"></script>
   <script src="directive/resultList/resultList.js"></script>
+  <script src="directive/ranking/ranking.js"></script>
   <!-- Add New Component JS Above -->
 </body>
 </html>
