Added generation, retrieving and displaying of team's notable matches. Added two notable match types (biggest win, biggest defeat).

--- a/natrank-frontend/index.html
+++ b/natrank-frontend/index.html
@@ -78,6 +78,7 @@
   <script src="service/team.js"></script>
   <script src="directive/resultList/resultList.js"></script>
   <script src="directive/ranking/ranking.js"></script>
+  <script src="directive/result/result.js"></script>
   <!-- Add New Component JS Above -->
 </body>
 </html>
