--- a/natrank-frontend/index.html
+++ b/natrank-frontend/index.html
@@ -65,6 +65,8 @@
   <script src="bower_components/angular-resource/angular-resource.js"></script>
   <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
+  <script src="bower_components/highcharts/highcharts.js"></script>
+  <script src="bower_components/highcharts-ng/dist/highcharts-ng.js"></script>
   <!-- Add New Bower Component JS Above -->
 
   <!-- Main App JS -->
