Fine-tuned JSON output using Jackson's JsonView

--- a/natrank-frontend/directive/ranking/ranking.html
+++ b/natrank-frontend/directive/ranking/ranking.html
@@ -37,11 +37,11 @@
         </span>
       </td>
       <td class="team-flag">
-        <img src="img/flags/{{entry.teamInfo.flag.code}}.png" class="flag" />
+        <img src="img/flags/{{entry.team.flag}}.png" class="flag" />
       </td>
       <td class="team-name">
-        <a data-ng-href="teams/{{entry.teamInfo.name | lowercase | whitespaceToDash}}">
-          {{entry.teamInfo.name}}
+        <a data-ng-href="teams/{{entry.team.name | lowercase | whitespaceToDash}}">
+          {{entry.team.name}}
         </a>
       </td>
       <td class="rating">
