--- a/natrank-frontend/directive/resultList/resultList.html
+++ b/natrank-frontend/directive/resultList/resultList.html
@@ -3,7 +3,7 @@
   <ul id="results">
     <!-- FIXME: Wins and losses don't show up correctly -->
     <div data-result="" data-ng-repeat="result in resultsPage.content"
-         data-ng-class="{'win': team.id && result.winnerTeam.id == team.id, 'loss': team.id && result.winnerTeam.id && result.winnerTeam.id != team.id}">
+         data-ng-class="{'win': team.id && result.winnerid == team.id, 'loss': team.id && result.winnerid && result.winnerid != team.id}">
     </div>
   </ul>
   <div data-ng-include src="'partial/results/pagination.html'" data-ng-show="resultsPage.totalPages > 1"></div>
