--- a/natrank-frontend/directive/resultList/resultList.html
+++ b/natrank-frontend/directive/resultList/resultList.html
@@ -1,7 +1,6 @@
-<div id="result-list-container">
+<div id="result-list-container" class="animated-container" data-ng-hide="loadingPageForYear">
   <div data-ng-include src="'partial/results/pagination.html'" data-ng-show='resultsPage.totalPages > 1'></div>
-  <ul id="results">
-    <!-- FIXME: Wins and losses don't show up correctly -->
+  <ul id="results" class="animated-container" data-ng-hide="loadingPage">
     <div data-result="" data-ng-repeat="result in resultsPage.content"
          data-ng-class="{'win': team.id && result.winnerid == team.id, 'loss': team.id && result.winnerid && result.winnerid != team.id}">
     </div>
