--- a/natrank-frontend/directive/resultList/resultList.html
+++ b/natrank-frontend/directive/resultList/resultList.html
@@ -5,5 +5,5 @@
          data-ng-class="{'win': team.id && result.idWinner == team.id, 'loss': team.id && result.idWinner && result.idWinner != team.id}">
     </div>
   </ul>
-  <div data-ng-include src="'partial/results/pagination.html'" data-ng-show="resultsPage.totalPages > 1"></div>
+  <div data-ng-include="" src="'partial/results/pagination.html'" data-ng-show="resultsPage.totalPages > 1"></div>
 </div>
