--- a/natrank-frontend/index.html
+++ b/natrank-frontend/index.html
@@ -9,24 +9,7 @@
   <link href="bower_components/angular-loading-bar/build/loading-bar.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-  <div id="top-bar">
-    <div class="container">
-      <header>
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/">natrank<sup>beta</sup></a>
-      </header>
-      <nav class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-          <li><a href="results">Results</a></li>
-          <li><a href="rankings">Rankings</a></li>
-        </ul>
-      </nav>
-    </div>
+  <div id="top-bar" data-ng-include="" src="'partial/header/header.html'">
   </div>
 
   <div id="main-container">
@@ -65,6 +48,7 @@
   <script src="service/matchService.js"></script>
   <script src="service/teamService.js"></script>
   <script src="service/rankingService.js"></script>
+  <script src="partial/header/header.js"></script>
   <script src="partial/landing/landing.js"></script>
   <script src="partial/results/results.js"></script>
   <script src="partial/rankings/rankings.js"></script>
