--- a/natrank-frontend/index.html
+++ b/natrank-frontend/index.html
@@ -45,6 +45,7 @@
 
   <!-- Main App JS -->
   <script src="app.js"></script>
+  <script src="config.js"></script>
   <script src="service/matchService.js"></script>
   <script src="service/teamService.js"></script>
   <script src="service/rankingService.js"></script>
