--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,10 +1,13 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>:^)</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>natrank</title>
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
